# practice

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  init.bat  main.c  main.cpp  test.cpp  test2.cpp
.temp/ocl_exe/: CMakeLists.txt
.temp/ocl_exe/source/: input.pgm  kernels.cl  main.cpp  pgm.hpp
.temp/old_code/ocl_convolution/: convolution.cl  main.c  pgm.h
.temp/old_code/ocl_downscale/: downscale.cl  exe_main  main.c  output.pgm  run.sh
.temp/old_code/ocl_downscale_convolution/: exe_main  output.pgm  run.bat
.temp/old_code/pgm/: exe_main  main.c  run.sh
.temp/sync/cl/downscale/: main.c  run.bat
.temp/sync/cl/downscale_conv/: downscale.cl  main.c  output.pgm
.temp/sync/cl/downscale_conv_image2d/: downscale.cl  main.c  output.pgm  pgm.h  run.bat
.temp/sync/cl/downscale_image2d/: args.h  downscale.cl  main.c  output.pgm  pgm.h
.temp/sync/cl/vox/: ocl.c  points_c.txt  points_ocl.txt  run.bat  vox.cpp  voxKernel.cl  vox_structs.h
.temp/sync/vk/v1/: Square.comp  Square.spv  main.cpp
.temp/sync/vk/v2/: Square.comp  Square.spv  main.cpp  main_v1.cpp  output.pgm  (+1 more)
images/: bay.pgm
include/: blur.h  blur.hpp  convolution.hpp  edge.h  edge.hpp  enums.hpp  histogram.h  histogram.hpp  pgm.h  pgm.hpp  resize.hpp
src/: CMakeLists.txt  main.cpp  test.cpp
src/cv/: edge.hpp  histogram.hpp
src/dsa/: document_distance.cpp  document_distance.h  peak_finding.cpp  peak_finding.h  sorting.cpp  sorting.h
src/inc/: enums.hpp  kernels.cl  pgm.hpp  resize.hpp
src/inc/cv/: blur.hpp  convolution.hpp  ocl.hpp
src/inc/dsa/: dsa.h  peak_finding.h
(+12 files in other folders)
